# AgenticAIOps

./: .coverage  .gitignore  .kb_bucket  .pids  Dev-mind.md-DO-NOT-DELETE  InfraChanges.md  OPENPOINTS_FOR_MASTER.md  README.md  api_server.py  demo.py  e2e_real_test.py  main.py  mcp_agent.py  pyproject.toml  requirements.txt  start.sh  stop.sh  strands_agent.py  strands_agent_full.py  test_agent.py  test_local.py  test_strands.py  test_strands_full.py
config/: rca_patterns.yaml
dashboard/: package-lock.json  package.json  playwright.config.js
data/: issues.db
docs/: AGENTIC_SDLC_ARCHITECTURE.md  AGENT_APPS_SETUP.md  API_REFERENCE.md  ARCHITECTURE.md  CURRENT_ARCHITECTURE.md  DEVELOPMENT_APPROACH.md  E2E_TESTING_DESIGN.md  FAULT_TEST_SCENARIOS.md  InfraChanges.md  OPENPOINTS_FOR_MASTER.md  ROADMAP.md  TESTING.md  v2-architecture.md
iac/: README.md  bedrock-kb-setup.sh
infra/: eks-cluster.yaml
logs/: token_usage.md
samples/: README.md  bookstore.yaml  faulty-workloads.yaml  hpa.yaml  onlineshop.yaml
scripts/: lint_async.sh  server.sh
src/: __init__.py  agent.py  alarm_webhook.py  aws_ops.py  aws_scanner.py  bedrock_agent.py  cli.py  config.py  detect_agent.py  event_correlator.py  incident_orchestrator.py  intent_classifier.py  knowledge_search.py  kubectl_wrapper.py  lambda_eks_operations.py  lambda_handler.py  mock.py  multi_agent_voting.py  notifications.py  operations_knowledge.py  pattern_rag.py  proactive_agent.py  rca_inference.py  rca_sop_bridge.py  s3_knowledge_base.py  sop_safety.py  sop_system.py  vector_search.py
tests/: e2e_real_scenario.py  (+33 more)
(+2074 files in other folders)
