[project]
name = "agentic-aiops-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.18.0",
    "boto3>=1.34.0",
    "click>=8.1.0",
    "kubernetes>=28.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "strands-agents>=1.20.0",
]
